# atividadeGRPC_SALA

./: CMakeLists.txt  README.md  cliente.cpp  servidor.py  urls.proto  urls_pb2.py  urls_pb2_grpc.py
cliente/: CMakeLists.txt  urls.proto
servidor/: urls_pb2.py  urls_pb2.pyi  urls_pb2_grpc.py
